src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void detail_ExposureCompensator_getMatGains_0(void* self, void* arg1);
extern "C" __declspec(dllexport) void detail_ExposureCompensator_setMatGains_0(void* self, void* arg1);
extern "C" __declspec(dllexport) void detail_ExposureCompensator_setUpdateGain_0(void* self, bool b);
extern "C" __declspec(dllexport) bool detail_ExposureCompensator_getUpdateGain_0(void* self);
extern "C" __declspec(dllexport) void detail_FeatherBlender_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_FeatherBlender_New_0(float sharpness);
extern "C" __declspec(dllexport) float detail_FeatherBlender_sharpness_0(void* self);
extern "C" __declspec(dllexport) void detail_FeatherBlender_setSharpness_0(void* self, float val);
extern "C" __declspec(dllexport) void detail_FeatherBlender_prepare_0(void* self, cv::Rect dst_roi);
extern "C" __declspec(dllexport) void detail_FeatherBlender_feed_0(void* self, void* img, void* mask, cv::Point tl);
extern "C" __declspec(dllexport) void detail_FeatherBlender_blend_0(void* self, void* dst, void* dst_mask);
extern "C" __declspec(dllexport) cv::Rect detail_FeatherBlender_createWeightMaps_0(void* self, void* masks, void* corners, void* weight_maps);
extern "C" __declspec(dllexport) void detail_FeaturesMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void detail_FeaturesMatcher_operator____0(void* self, void* features1, void* features2, void* matches_info);
extern "C" __declspec(dllexport) void detail_FeaturesMatcher_operator____1(void* self, void* features, void* pairwise_matches, void* mask);
extern "C" __declspec(dllexport) bool detail_FeaturesMatcher_isThreadSafe_0(void* self);
extern "C" __declspec(dllexport) void detail_FeaturesMatcher_collectGarbage_0(void* self);
extern "C" __declspec(dllexport) void detail_GainCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_GainCompensator_New_0();
extern "C" __declspec(dllexport) void* detail_GainCompensator_New_1(int nr_feeds);
extern "C" __declspec(dllexport) void detail_GainCompensator_apply_0(void* self, int index, cv::Point corner, void* image, void* mask);
extern "C" __declspec(dllexport) void detail_GainCompensator_getMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_GainCompensator_setMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_GainCompensator_setNrFeeds_0(void* self, int nr_feeds);
extern "C" __declspec(dllexport) int detail_GainCompensator_getNrFeeds_0(void* self);
extern "C" __declspec(dllexport) void detail_GainCompensator_setSimilarityThreshold_0(void* self, double similarity_threshold);
extern "C" __declspec(dllexport) double detail_GainCompensator_getSimilarityThreshold_0(void* self);
extern "C" __declspec(dllexport) void detail_GraphCutSeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_GraphCutSeamFinder_New_0(const char* cost_type, float terminal_cost, float bad_region_penalty);
extern "C" __declspec(dllexport) void detail_GraphCutSeamFinder_find_0(void* self, void* src, void* corners, void* masks);
extern "C" __declspec(dllexport) void detail_HomographyBasedEstimator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_HomographyBasedEstimator_New_0(bool is_focals_estimated);
extern "C" __declspec(dllexport) void detail_ImageFeatures_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_ImageFeatures_getKeypoints_0(void* self);
extern "C" __declspec(dllexport) int detail_ImageFeatures_img_idx_get(void* self);
extern "C" __declspec(dllexport) void detail_ImageFeatures_img_idx_set(void* self, int val);
extern "C" __declspec(dllexport) cv::Size detail_ImageFeatures_img_size_get(void* self);
extern "C" __declspec(dllexport) void detail_ImageFeatures_img_size_set(void* self, cv::Size val);
extern "C" __declspec(dllexport) void* detail_ImageFeatures_keypoints_get(void* self);
extern "C" __declspec(dllexport) void detail_ImageFeatures_keypoints_set(void* self, void* val);
extern "C" __declspec(dllexport) void* detail_ImageFeatures_descriptors_get(void* self);
extern "C" __declspec(dllexport) void detail_ImageFeatures_descriptors_set(void* self, void* val);
extern "C" __declspec(dllexport) void detail_LightGlueFeaturesMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_LightGlueFeaturesMatcher_New_0(void* lgMatcher, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
extern "C" __declspec(dllexport) void detail_LightGlueFeaturesMatcher_setScoreThreshold_0(void* self, float thresh);
extern "C" __declspec(dllexport) void detail_MatchesInfo_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_MatchesInfo_getMatches_0(void* self);
extern "C" __declspec(dllexport) void* detail_MatchesInfo_getInliers_0(void* self);
extern "C" __declspec(dllexport) int detail_MatchesInfo_src_img_idx_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_src_img_idx_set(void* self, int val);
extern "C" __declspec(dllexport) int detail_MatchesInfo_dst_img_idx_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_dst_img_idx_set(void* self, int val);
extern "C" __declspec(dllexport) void* detail_MatchesInfo_matches_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_matches_set(void* self, void* val);
extern "C" __declspec(dllexport) void* detail_MatchesInfo_inliers_mask_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_inliers_mask_set(void* self, void* val);
extern "C" __declspec(dllexport) int detail_MatchesInfo_num_inliers_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_num_inliers_set(void* self, int val);
extern "C" __declspec(dllexport) void* detail_MatchesInfo_H_get(void* self);