src/OpenCV5Sharp/Generated/NativeMethods.Stitching.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_getMatGains_0(DetailExposureCompensatorHandle self, IntPtr arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_setMatGains_0(DetailExposureCompensatorHandle self, IntPtr arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ExposureCompensator_setUpdateGain_0(DetailExposureCompensatorHandle self, [MarshalAs(UnmanagedType.U1)] bool b);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool detail_ExposureCompensator_getUpdateGain_0(DetailExposureCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeatherBlender_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_FeatherBlender_New_0(float sharpness);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float detail_FeatherBlender_sharpness_0(DetailFeatherBlenderHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeatherBlender_setSharpness_0(DetailFeatherBlenderHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeatherBlender_prepare_0(DetailFeatherBlenderHandle self, Rect dst_roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeatherBlender_feed_0(DetailFeatherBlenderHandle self, MatHandle img, MatHandle mask, Point tl);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeatherBlender_blend_0(DetailFeatherBlenderHandle self, MatHandle dst, MatHandle dst_mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect detail_FeatherBlender_createWeightMaps_0(DetailFeatherBlenderHandle self, IntPtr masks, IntPtr corners, IntPtr weight_maps);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeaturesMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeaturesMatcher_operator____0(DetailFeaturesMatcherHandle self, IntPtr features1, IntPtr features2, IntPtr matches_info);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeaturesMatcher_operator____1(DetailFeaturesMatcherHandle self, IntPtr features, IntPtr pairwise_matches, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool detail_FeaturesMatcher_isThreadSafe_0(DetailFeaturesMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_FeaturesMatcher_collectGarbage_0(DetailFeaturesMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_GainCompensator_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_GainCompensator_New_1(int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_apply_0(DetailGainCompensatorHandle self, int index, Point corner, MatHandle image, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_getMatGains_0(DetailGainCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_setMatGains_0(DetailGainCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_setNrFeeds_0(DetailGainCompensatorHandle self, int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_GainCompensator_getNrFeeds_0(DetailGainCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GainCompensator_setSimilarityThreshold_0(DetailGainCompensatorHandle self, double similarity_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_GainCompensator_getSimilarityThreshold_0(DetailGainCompensatorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GraphCutSeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_GraphCutSeamFinder_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? cost_type, float terminal_cost, float bad_region_penalty);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_GraphCutSeamFinder_find_0(DetailGraphCutSeamFinderHandle self, IntPtr src, IntPtr corners, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_HomographyBasedEstimator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_HomographyBasedEstimator_New_0([MarshalAs(UnmanagedType.U1)] bool is_focals_estimated);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ImageFeatures_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_ImageFeatures_getKeypoints_0(DetailImageFeaturesHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_ImageFeatures_img_idx_get(DetailImageFeaturesHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ImageFeatures_img_idx_set(DetailImageFeaturesHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size detail_ImageFeatures_img_size_get(DetailImageFeaturesHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ImageFeatures_img_size_set(DetailImageFeaturesHandle self, Size val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_ImageFeatures_keypoints_get(DetailImageFeaturesHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ImageFeatures_keypoints_set(DetailImageFeaturesHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_ImageFeatures_descriptors_get(DetailImageFeaturesHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ImageFeatures_descriptors_set(DetailImageFeaturesHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_LightGlueFeaturesMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_LightGlueFeaturesMatcher_New_0(LightGlueMatcherHandle lgMatcher, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_LightGlueFeaturesMatcher_setScoreThreshold_0(DetailLightGlueFeaturesMatcherHandle self, float thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MatchesInfo_getMatches_0(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MatchesInfo_getInliers_0(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_MatchesInfo_src_img_idx_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_src_img_idx_set(DetailMatchesInfoHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_MatchesInfo_dst_img_idx_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_dst_img_idx_set(DetailMatchesInfoHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MatchesInfo_matches_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_matches_set(DetailMatchesInfoHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MatchesInfo_inliers_mask_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_inliers_mask_set(DetailMatchesInfoHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_MatchesInfo_num_inliers_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_num_inliers_set(DetailMatchesInfoHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MatchesInfo_H_get(DetailMatchesInfoHandle self);
